YC Startup School

--- a/Evergreen Notes/Startups/2. Startups.md
+++ b/Evergreen Notes/Startups/2. Startups.md
@@ -1,6 +1,6 @@
 Info about starting startups
 
-YC founders school:
+YC Startup School:
 [[Paul Graham - Before the Startup]]
 [[Paul Graham - How to Think For Yourself]]
 [[Paul Graham - Why to not not start a startup]]
