--- a/Evergreen Notes/Startups/2. Startups.md
+++ b/Evergreen Notes/Startups/2. Startups.md
@@ -5,3 +5,17 @@ YC Startup School:
 [[Paul Graham - How to Think For Yourself]]
 [[Paul Graham - Why to not not start a startup]]
 [[Jared Friedman - How to Get Startup Ideas]]
+[[Adora Cheung - How to Proritize Your Time (Startup School)]]
+[[Kat Manalac - How To Launch Again and Again (Startup School)]]
+[[Kevin Hale - How to Work Together (Startup School)]]
+[[Michael Seibel - How to Split Equity Among Co-Founders (Startup School)]]
+[[Michael Seibel - How to Plan an MVP (Startup School)]]
+[[Paul Graham - Before the Startup]]
+[[Paul Graham - How to get Startup Ideas]]
+[[Paul Graham - How to Think For Yourself]]
+[[Paul Graham - Why to not not start a startup]]
+[[Kevin Hale - How to Pitch Your Startup (Startup School)]]
+[[Eric Migicovsky - Startup School - How to Talk to Users]]
+
+Podcasts:
+[[Tim Ferris - Daniel Ek]]
